tests/NormalTests/paczka1/small_fuzzy/20717278.err
Error in line 1: RqzS2oK A341 61,5
Error in line 10: RqzS2oK S244 98,7
